--- a/src/pages/ui-kit/__form-elements/ui-kit__form-elements.pug
+++ b/src/pages/ui-kit/__form-elements/ui-kit__form-elements.pug
@@ -25,75 +25,67 @@ body.ui-kit__body.bg-color_white
     .form-elements__wrap.wrap_top
       .form-elements__column.column_left
         .form-elements__block.block__inputs_common
-          +inputs([
-            {
-              title: "text field",
-              state: "default",
-              placeholder: "Email"
-            },
-            {
-              title: "text field",
-              state: "hover / focus",
-              placeholder: "This is pretty awesome",
-              disabled: true
-            },
-            {
-              id: "uik-fe__common_01",
-              type: "dropdown",
-              title: "dropdown",
-              placeholder: "Сколько гостей",
-              dropdown: {
-                expanded: false,
-                options: [
-                  "взрослые",
-                  "дети",
-                  "младенцы"
-                ]
-              }
-            },
-            {
-              title: "masked text field",
-              placeholder: "ДД.ММ.ГГГГ"
+          +input({
+            title: "text field",
+            state: "default",
+            placeholder: "Email"
+          })
+          +input({
+            title: "text field",
+            state: "hover / focus",
+            placeholder: "This is pretty awesome",
+            disabled: true
+          })
+          +input({
+            id: "uik-fe__common_01",
+            type: "dropdown",
+            title: "dropdown",
+            placeholder: "Сколько гостей",
+            dropdown: {
+              expanded: false,
+              options: [
+                "взрослые",
+                "дети",
+                "младенцы"
+              ]
             }
-          ])
+          })
+          +input({
+            title: "masked text field",
+            placeholder: "ДД.ММ.ГГГГ"
+          })
         .form-elements__block.block__dropdowns_date-twins
           .form-elements__element
             .input__line-array.twins-grid-line
-              +inputs([
-                {
-                  id: "uik-fe__twins_01",
-                  type: "date-picker",
-                  title: "date dropdown",
-                  placeholder: "ДД.ММ.ГГГГ",
-                  widthbypercent: 50,
-                },
-                {
-                  id: "uik-fe__twins_02",
-                  type: "date-picker",
-                  title: "date dropdown",
-                  placeholder: "19.08.2019",
-                  widthbypercent: 50,
-                }
-              ])
+              +input({
+                id: "uik-fe__date-twins_arrival",
+                type: "date-picker",
+                title: "date dropdown",
+                placeholder: "ДД.ММ.ГГГГ",
+                widthbypercent: 50,
+              })
+              +input({
+                id: "uik-fe__date-twins_departure",
+                type: "date-picker",
+                title: "date dropdown",
+                placeholder: "19.08.2019",
+                widthbypercent: 50,
+              })
         .form-elements__block.block__dropdowns_date-semi-wide
-          +inputs([
-            {
-              id: "uik-fe__semi-wide_01",
-              type: "date-picker",
-              title: "filter date dropdown",
-              placeholder: "19 авг - 23 авг",
-              widthbypercent: 75,
-            }
-          ])
+          +input({
+            id: "uik-fe__semi-wide_01",
+            type: "date-picker",
+            title: "filter date dropdown",
+            placeholder: "19 авг - 23 авг",
+            widthbypercent: 75,
+          })
         .form-elements__block.block__inputs_subscribe
-          +inputs([
-            {
-              type: "subscription",
-              title: "subscription text field",
-              placeholder: "Email",
-              widthbypercent: 75,
-            }
-          ])
+          +input({
+            type: "subscription",
+            title: "subscription text field",
+            placeholder: "Email",
+            widthbypercent: 75,
+          })
       .form-elements__column.column_center
         .form-elements__block.block__checkbox-buttons
           .form-elements__element
@@ -183,75 +175,69 @@ body.ui-kit__body.bg-color_white
     .form-elements__wrap.wrap_upper-middle
       .form-elements__column.column_left
         .form-elements__block.block__dropdowns_action
-          +inputs([
-            {
-              id: "uik-fe__action_01",
-              type: "dropdown",
-              title: "dropdown",
-              state: "default",
-              placeholder: "2 спальни, 2 кровати...",
-              widthbypercent: 75,
-              dropdown: {
-                options: [
-                  "спальни",
-                  "кровати",
-                  "ванные комнаты"
-                ]
-              }
-            },
-            {
-              id: "uik-fe__action_02",
-              type: "dropdown",
-              title: "dropdown",
-              state: "expanded",
-              placeholder: "2 спальни, 2 кровати...",
-              widthbypercent: 75,
-              dropdown: {
-                expanded: true,
-                options: [
-                  "спальни",
-                  "кровати",
-                  "ванные комнаты"
-                ]
-              }
+          +input({
+            id: "uik-fe__action_01",
+            type: "dropdown",
+            title: "dropdown",
+            state: "default",
+            placeholder: "2 спальни, 2 кровати...",
+            widthbypercent: 75,
+            dropdown: {
+              options: [
+                "спальни",
+                "кровати",
+                "ванные комнаты"
+              ]
             }
-          ])
+          })
+          +input({
+            id: "uik-fe__action_02",
+            type: "dropdown",
+            title: "dropdown",
+            state: "expanded",
+            placeholder: "2 спальни, 2 кровати...",
+            widthbypercent: 75,
+            dropdown: {
+              expanded: true,
+              options: [
+                "спальни",
+                "кровати",
+                "ванные комнаты"
+              ]
+            }
+          })
       .form-elements__column.column_center
         .form-elements__block.block__dropdowns_no-guests
-          +inputs([
-            {
-              id: "uik-fe__no-guests_01",
-              type: "dropdown",
-              title: "dropdown",
-              placeholder: "Сколько гостей",
-              dropdown: {
-                expanded: true,
-                options: [
-                  "взрослые",
-                  "дети",
-                  "младенцы"
-                ]
-              }
+          +input({
+            id: "uik-fe__no-guests_01",
+            type: "dropdown",
+            title: "dropdown",
+            placeholder: "Сколько гостей",
+            dropdown: {
+              expanded: true,
+              options: [
+                "взрослые",
+                "дети",
+                "младенцы"
+              ]
             }
-          ])
+          })
       .form-elements__column.column_right
         .form-elements__block.block__dropdowns_guests
-          +inputs([
-            {
-              id: "uik-fe__guests_01",
-              type: "dropdown",
-              title: "dropdown",
-              placeholder: "3 гостя",
-              dropdown: {
-                expanded: true,
-                options: [
-                  "взрослые",
-                  "дети",
-                  "младенцы"
-                ]
-              }
+          +input({
+            id: "uik-fe__guests_01",
+            type: "dropdown",
+            title: "dropdown",
+            placeholder: "3 гостя",
+            dropdown: {
+              expanded: true,
+              options: [
+                "взрослые",
+                "дети",
+                "младенцы"
+              ]
             }
-          ])
+          })
     .form-elements__wrap.wrap_lower-middle
       .form-elements__column.column_left
         .form-elements__block.block__checkbox-list_default
