--- a/src/components/footer/footer.pug
+++ b/src/components/footer/footer.pug
@@ -3,49 +3,57 @@ include /components/input/input.pug
 include /components/title-bar/title-bar.pug
 include /components/navigation-bar/navigation-bar.pug
 
+- 
+  const navBarUnits = [
+    {
+      vertical: true,
+      title: "навигация",
+      links: [
+        { name: "О нас" },
+        { name: "Новости" },
+        { name: "Служба поддержки" },
+        { name: "Услуги" }
+      ]
+    },
+    {
+      vertical: true,
+      title: "О нас",
+      links: [
+        { name: "О сервисе" },
+        { name: "Наша команда" },
+        { name: "Вакансии" },
+        { name: "Инвесторы" }
+      ]
+    },
+    {
+      vertical: true,
+      title: "Служба поддержки",
+      links: [
+        { name: "Соглашения" },
+        { name: "Сообщества" },
+        { name: "Связь с нами" }
+      ]
+    }
+  ]
+
 mixin footer( item )
+
   case item.type
     when 'default'
       .footer.footer_default
         .footer__upper-section
           .footer__upper-section_content
+
             .footer__content_start-end
               .footer__logotype
                 +logo({ type: "colorful" })
               .footer__awards-text
                 span.custom-font-style_body Бронирование номеров в лучшем отеле 2019 года по версии ассоциации «Отельные взгляды»
-            .footer__content
-              +navigationBar({
-                vertical: true,
-                title: "навигация",
-                links: [
-                  { name: "О нас" },
-                  { name: "Новости" },
-                  { name: "Служба поддержки" },
-                  { name: "Услуги" }
-                ]
-              })
-            .footer__content
-              +navigationBar({
-                vertical: true,
-                title: "О нас",
-                links: [
-                  { name: "О сервисе" },
-                  { name: "Наша команда" },
-                  { name: "Вакансии" },
-                  { name: "Инвесторы" }
-                ]
-              })
-            .footer__content
-              +navigationBar({
-                vertical: true,
-                title: "Служба поддержки",
-                links: [
-                  { name: "Соглашения" },
-                  { name: "Сообщества" },
-                  { name: "Связь с нами" }
-                ]
-              })
+
+            each unit in navBarUnits
+              .footer__content
+                +navigationBar( unit )
+
             .footer__content_start-end
               +titleBar("подписка")
               span.custom-font-style_body Получайте специальные предложения и новости сервиса
@@ -55,11 +63,12 @@ mixin footer( item )
                 widthbypercent: 75,
                 subscription: true
               })
+
         .footer__lower-section
           .footer__lower-section_left
             span.custom-font-style_body Copyright © 2018 Toxin отель. Все права защищены.
           .footer__lower-section_right
-          
+
     when 'mobile'
       .footer.footer_mobile
         .footer__central-section
