Fixed footer-s subscription input button-s absence

--- a/src/components/footer/footer.pug
+++ b/src/components/footer/footer.pug
@@ -59,9 +59,8 @@ mixin footer( item )
               span.custom-font-style_body Получайте специальные предложения и новости сервиса
               +input({
                 placeholder: "Email",
-                type: "email",
+                type: "subscription",
                 widthbypercent: 75,
-                subscription: true
               })
 
         .footer__lower-section
