Refactored components width selector-class and every relative mixin property

--- a/src/components/header/header.pug
+++ b/src/components/header/header.pug
@@ -27,7 +27,7 @@ mixin header( item )
             +meanOvalButtons({
               groupname: "header__login-btn",
               buttons: [
-                { type: "outlined", text: "войти" },
-                { type: "contained", text: "зарегестрироваться", widthbypercent: 75 }
+                { type: "outlined", widthbypercent: 27, text: "войти" },
+                { type: "contained", widthbypercent: 61, text: "зарегестрироваться" }
               ]
             })
