--- a/src/components/components.scss
+++ b/src/components/components.scss
@@ -6,16 +6,28 @@
     width: 320px
   }
 
-  &_75 {
+  &_83 {
     width: 266px;
   }
 
-  &_50 {
+  &_81 {
+    width: 260px;
+  }
+
+  &_61 {
+    width: 196px;
+  }
+
+  &_47 { 
     width: 150px
   }
 
   &_30 {
     width: 99px;
+  }
+
+  &_27 {
+    width: 87px;
   }
 }
 
