--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -28,8 +28,8 @@
     border-left: 1px solid rgba($valhalla, .1);
     padding-left: 20px;
 
-    &_full-name {
-      color: rgba($valhalla, .5);
+    &_username {
+      opacity: .5;
     }
   }
 
