Renamed some pics, room-sample card and cards page is under construction

--- a/src/components/card/__room-sample/card__room-sample.pug
+++ b/src/components/card/__room-sample/card__room-sample.pug
@@ -1,15 +1,27 @@
 include /components/button/__star-rate/button__star-rate.pug
+include /components/material-icon-cell/material-icon-cell.pug
 
 mixin cardRoomSample( item )
+  - let index = 0
+
   .room-sample
     .room-sample__container_top
       .room-sample__image
-        each image in item.images
-          img( src=require(`/src/assets/images/raster/room/__thumbnail/room__thumbnail_${ item.image }.png`) )
-      .room-sample__arrow_left 
-      .room-sample__image-listing-indicator
+        while index < 4
+          - const suffix = item.picturescount < ++index ? 'no-image' : item.number + '-' + index
+
+          img.room-sample__image_thumbnail( src=require(`/src/assets/images/raster/room/__thumbnail/room__thumbnail_${ suffix }.png`) )
+      .room-sample__arrow_left
+        +materialIcon("chevron_left")
+      .room-sample__listing-indicator
+        +materialIcon("circle")
+        +materialIcon("trip_origin")
+        +materialIcon("trip_origin")
+        +materialIcon("trip_origin")
+
       .room-sample__arrow_right
+        +materialIcon("chevron_left")
     .room-sample__container_bottom
       .room-sample__title
       .room-sample__rate-n-rewievs
-        +starRateButtons( item.rate )
+        +starRateButton( item.rate )
