--- a/src/components/card/__room-sample/card__room-sample.scss
+++ b/src/components/card/__room-sample/card__room-sample.scss
@@ -1,8 +1,13 @@
 .room-sample {
+  background-color: white;
   width: 270px;
 
   &__container_top {
-    width: 151px;
+    border-radius: 4px 4px 0px 0px;
+    position: relative;
+    width: 270px;
+    height: 151px;
+    overflow: hidden;
 
     & .material-icons {
       color: white;
@@ -10,29 +15,41 @@
   }
 
   &__image {
+    display: flex;
+  }
 
-    &_thumbnail {
-
-    }
+  &__arrow_left,
+  &__arrow_right,
+  &__listing-indicator {
+    position: absolute;
   }
 
   &__arrow {
     &_left,
     &_right {
+      top: 0px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
       height: inherit;
       width: 42px;
       background: linear-gradient(90deg, rgba(black, 0.5) 0%, rgba(black, 0) 99.99%, rgba(white, 0) 100%);
+      cursor: pointer;
     }
 
     &_right {
       transform: scaleX(-1);
+      right: 0px;
     }
   }
 
   &__listing-indicator {
+    position: absolute;
     display: flex;
     justify-content: space-between;
     width: 41px;
+    bottom: 15px;
+    right: 15px;
 
     & > .material-icons {
       font-size: 8px;
