--- a/src/components/card/card.scss
+++ b/src/components/card/card.scss
@@ -1,19 +1,29 @@
+@import "@variables";
+
 .card-style {
+  &_default,
+  &_room-sample {
+    background-color: white;
+    box-sizing: border-box;
+    border-radius: 4px;
+  }
+
   &_default {
     display: grid;
     grid-gap: 20px;
     padding: 39px 29px 29px 29px;
-    background: #FFFFFF;
-    box-sizing: border-box;
     box-shadow: 0px 0px 25px rgba(black, .2);
     border: 1px solid rgba(black, .12);
-    border-radius: 4px;
     width: 380px;
 
     & > * {
       display: inherit;
       grid-gap: 10px;
     }
+  }
+
+  &_room-sample {
+    box-shadow: 0px 10px 20px rgba($valhalla, 0.05);
   }
 }
 
