--- a/src/pages/ui-kit/__cards/ui-kit__cards.pug
+++ b/src/pages/ui-kit/__cards/ui-kit__cards.pug
@@ -22,12 +22,12 @@ body.ui-kit__body.bg-color_whisper
         +cardLogin()
       .headers-n-footers__column
         +cardRoomSample({
-          number: 888,
+          roomnumber: 888,
           picturescount: 3,
           rate: 5
         })
         +cardRoomSample({
-          number: 840,
+          roomnumber: 840,
           picturescount: 1,
           rate: 4
         })
