--- a/src/components/card/__room-sample/card__room-sample.pug
+++ b/src/components/card/__room-sample/card__room-sample.pug
@@ -3,25 +3,33 @@ include /components/material-icon-cell/material-icon-cell.pug
 
 mixin cardRoomSample( item )
   - let index = 0
+  - let suffixes = []
+
+  while index < 4
+    - suffixes[++index] = item.picturescount < index ? 'no-image' : item.roomnumber + '-' + index
+    - suffixes[0] = suffixes[4]
+    - suffixes[5] = suffixes[1]
 
   .room-sample.card-style_room-sample
     .room-sample__container_top
       .room-sample__image
-        while index < 4
-          - const suffix = item.picturescount < ++index ? 'no-image' : item.number + '-' + index
-
+        each suffix in suffixes
           img( src=require(`/src/assets/images/raster/room/__thumbnail/room__thumbnail_${ suffix }.png`) )
-      .room-sample__arrow_left
+
+      .room-sample__arrow-scroller_left
         +materialIcon("chevron_left")
+
       .room-sample__listing-indicator
         +materialIcon("circle")
         +materialIcon("trip_origin")
         +materialIcon("trip_origin")
         +materialIcon("trip_origin")
 
-      .room-sample__arrow_right
+      .room-sample__arrow-scroller_right
         +materialIcon("chevron_left")
+
     .room-sample__container_bottom
       .room-sample__title
+      
       .room-sample__rate-n-rewievs
         +starRateButton( item.rate )
