--- a/src/components/card/__room-sample/card__room-sample.pug
+++ b/src/components/card/__room-sample/card__room-sample.pug
@@ -2,6 +2,9 @@ include /components/button/__star-rate/button__star-rate.pug
 include /components/material-icon-cell/material-icon-cell.pug
 
 mixin cardRoomSample( item )
+  - const itemLeftID = item.roomnumber + '_left'
+  - const itemRightID = item.roomnumber + '_right'
+
   - let index = 0
   - let suffixes = []
 
@@ -16,8 +19,8 @@ mixin cardRoomSample( item )
         each suffix in suffixes
           img( src=require(`/src/assets/images/raster/room/__thumbnail/room__thumbnail_${ suffix }.png`) )
 
-      .room-sample__arrow-scroller_left
-        +materialIcon("chevron_left")
+      .room-sample__arrow-scroller_left( id=itemLeftID )
+        +materialIcon("chevron_left", itemLeftID)
 
       .room-sample__listing-indicator
         +materialIcon("circle")
@@ -25,11 +28,11 @@ mixin cardRoomSample( item )
         +materialIcon("trip_origin")
         +materialIcon("trip_origin")
 
-      .room-sample__arrow-scroller_right
-        +materialIcon("chevron_left")
+      .room-sample__arrow-scroller_right( id=itemRightID )
+        +materialIcon("chevron_left", itemRightID)
 
     .room-sample__container_bottom
       .room-sample__title
-      
+
       .room-sample__rate-n-rewievs
         +starRateButton( item.rate )
