--- a/src/components/card/__room-sample/card__room-sample.scss
+++ b/src/components/card/__room-sample/card__room-sample.scss
@@ -38,6 +38,10 @@ $cardWidth: 270px;
       width: 42px;
       background: linear-gradient(90deg, rgba(black, 0.5) 0%, rgba(black, 0) 99.99%, rgba(white, 0) 100%);
       cursor: pointer;
+
+      & > label {
+        cursor: inherit;
+      }
     }
 
     &_right {
