--- a/src/components/card/__room-sample/card__room-sample.pug
+++ b/src/components/card/__room-sample/card__room-sample.pug
@@ -19,7 +19,7 @@ mixin cardRoomSample( item )
         each suffix in suffixes
           img( src=require(`/src/assets/images/raster/room/__thumbnail/room__thumbnail_${ suffix }.png`) )
 
-      .room-sample__arrow-scroller_left( id=itemLeftID )
+      .room-sample__arrow-scroller_left.scroller( id=itemLeftID )
         +materialIcon("chevron_left", itemLeftID)
 
       .room-sample__listing-indicator
@@ -28,7 +28,7 @@ mixin cardRoomSample( item )
         +materialIcon("trip_origin")
         +materialIcon("trip_origin")
 
-      .room-sample__arrow-scroller_right( id=itemRightID )
+      .room-sample__arrow-scroller_right.scroller( id=itemRightID )
         +materialIcon("chevron_left", itemRightID)
 
     .room-sample__container_bottom
