--- a/src/components/card/__room-sample/card__room-sample.pug
+++ b/src/components/card/__room-sample/card__room-sample.pug
@@ -2,14 +2,14 @@ include /components/button/__star-rate/button__star-rate.pug
 include /components/material-icon-cell/material-icon-cell.pug
 
 mixin cardRoomSample( item )
-  - const itemLeftID = item.roomnumber + '_left'
-  - const itemRightID = item.roomnumber + '_right'
+  - const itemLeftID = item.room + '_left'
+  - const itemRightID = item.room + '_right'
 
   - let index = 0
   - let suffixes = []
 
   while index < 4
-    - suffixes[++index] = item.picturescount < index ? 'no-image2' : item.roomnumber + '-' + index
+    - suffixes[++index] = item.count.pictures < index ? 'no-image' : item.room + '-' + index
     - suffixes[0] = suffixes[4]
     - suffixes[5] = suffixes[1]
 
@@ -32,7 +32,20 @@ mixin cardRoomSample( item )
         +materialIcon("chevron_left", itemRightID)
 
     .room-sample__container_bottom
-      .room-sample__title
+      .room-sample__title-container 
+        .room-booking__title
+          span.room-booking__title_prefix.custom-font-style_body-plain № 
+          span.custom-font-style_h2 #{ item.room }
+          if ( item.luxe )
+            span.room-booking__title_luxe-mark ЛЮКС
+        .room-booking__price.custom-font-style_body-plain
+          span.room-booking__price_value #{ item.price }
+          span.room-booking__price_symbol ₽ 
+          span.room-booking__price_addition в сутки
 
-      .room-sample__rate-n-rewievs
-        +starRateButton( item.rate )
+      .room-sample__rate-n-reviews
+        .room-sample__rate
+          +starRateButton( item.rate )
+        .room-sample__reviews
+          span.room-booking__price_value #{ item.count.reviews }
+          span.room-booking__price_addition  Отзывов
