--- a/src/pages/ui-kit/__cards/ui-kit__cards.pug
+++ b/src/pages/ui-kit/__cards/ui-kit__cards.pug
@@ -22,13 +22,22 @@ body.ui-kit__body.bg-color_whisper
         +cardLogin()
       .headers-n-footers__column
         +cardRoomSample({
-          roomnumber: 888,
-          picturescount: 3,
-          rate: 5
+          room: 888,
+          price: 9990,
+          rate: 5,
+          luxe: true,
+          count: {
+            reviews: 145,
+            pictures: 3,
+          }
         })
         +cardRoomSample({
-          roomnumber: 840,
-          picturescount: 1,
-          rate: 4
+          room: 840,
+          price: 9990,
+          rate: 4,
+          count: {
+            reviews: 65,
+            pictures: 1,
+          }
         })
   footer.ui-kit__footer
