--- a/src/variables/variables.scss
+++ b/src/variables/variables.scss
@@ -1,9 +1,21 @@
 $valhalla: #1F2041;
+
 $perfume: #BC9CFF;
 $portage: #8BA4F9;
+
 $silver-tree: #6FCF97;
 $turquoise-blue: #66D2EA;
+
+$cream-brulee: #FFE39C;
+$mandys-pink: #FFBA9C;
+
 $whisper: #E5E5E5;
 
-$primary-gradient: linear-gradient(180deg, $perfume 0%, $portage 100%);
-$secondary-gradient: linear-gradient(180deg, $silver-tree 0%, $turquoise-blue 100%);
+
+@function defineGradient( $primary, $secondary ) {
+  @return linear-gradient(180deg, $primary 0%, $secondary 100%);
+}
+
+$primary-gradient: defineGradient( $perfume, $portage );
+$secondary-gradient: defineGradient( $silver-tree, $turquoise-blue );
+$tertiary-gradient: defineGradient( $cream-brulee, $mandys-pink );
