added new page folder, added new page, experimenting with svg items of html5

--- a/src/components/reviews-chart/reviews-chart.pug
+++ b/src/components/reviews-chart/reviews-chart.pug
@@ -1,5 +1,9 @@
 mixin reviewsChart( item )
   .reviews-chart
     .reviews-chart__diagram
-    
+      svg.chart( width="120" height="120" viewBox="0 0 120 120" preserveAspectRatio="none" )
+        circle.unit( r="60" cx="50%" cy="50%" )
+        circle.unit( r="60" cx="50%" cy="50%" )
+        circle.unit( r="60" cx="50%" cy="50%" )
+        circle.unit( r="60" cx="50%" cy="50%" )
     .reviews-chart__legend
