--- a/src/components/reviews-chart/reviews-chart.pug
+++ b/src/components/reviews-chart/reviews-chart.pug
@@ -1,9 +1,42 @@
 mixin reviewsChart( item )
+  - 
+    const gradients = [
+      {
+        name: "primary",
+        startcolor: "#BC9CFF",
+        endcolor:   "#8BA4F9"
+      },
+      {
+        name: "secondary",
+        startcolor: "#6FCF97",
+        endcolor:   "#66D2EA"
+      },
+      {
+        name: "tetriary",
+        startcolor: "#FFE39C",
+        endcolor:   "#FFBA9C"
+      },
+      {
+        name: "quartenary",
+        startcolor: "#909090",
+        endcolor:   "#3D4975"
+      }
+    ]
+
   .reviews-chart
     .reviews-chart__diagram
       svg.chart( width="120" height="120" viewBox="0 0 120 120" preserveAspectRatio="none" )
-        circle.unit( r="60" cx="50%" cy="50%" )
-        circle.unit( r="60" cx="50%" cy="50%" )
-        circle.unit( r="60" cx="50%" cy="50%" )
-        circle.unit( r="60" cx="50%" cy="50%" )
+        defs
+          each gradient in gradients
+            linearGradient( id=`${ gradient.name }-gradient` )
+              stop( offset="0%"   stop-color=gradient.startcolor )
+              stop( offset="100%" stop-color=gradient.endcolor )
+
+        each gradient in gradients 
+          circle.unit(
+            r="56"
+            cx="50%"
+            cy="50%"
+            fill=`url(#${ gradient.name }-gradient)`
+          )
     .reviews-chart__legend
