--- a/src/components/reviews-chart/reviews-chart.scss
+++ b/src/components/reviews-chart/reviews-chart.scss
@@ -1,3 +1,5 @@
+@import "@variables";
+
 .unit {
   fill: none;
   stroke-width: 4;
@@ -5,18 +7,18 @@
 }
 
 .unit:nth-child(1) {
-  stroke: #86cfa3;
+  stroke: $perfume;
   stroke-dasharray: 90 360;
 }
 
 .unit:nth-child(2) {
-  stroke: #000;
+  stroke: $silver-tree;
   stroke-dasharray: 90 360;
   stroke-dashoffset: -90;
 }
 
 .unit:nth-child(3) {
-  stroke: #CCC;
+  stroke: $cream-brulee;
   stroke-dasharray: 180 360;
   stroke-dashoffset: -180;
 }
