--- a/src/pages/website/__room/website__room.pug
+++ b/src/pages/website/__room/website__room.pug
@@ -1,4 +1,4 @@
-include /components/reviews-chart/reviews-chart.pug
+include /components/votes-chart/votes-chart.pug
 
 head 
   title = TOXIN HOTEL / ROOM 
@@ -7,7 +7,7 @@ body
   header 
 
   main 
-    +reviewsChart({
+    +votesChart({
       test: 1
     })
 
