--- a/src/components/votes-chart/votes-chart.scss
+++ b/src/components/votes-chart/votes-chart.scss
@@ -1,12 +1,39 @@
 @import "@variables";
 
-.chart {
-  transform: rotateZ(-90deg);
+.votes-chart {
+  display: flex;
+
+  &__diagram {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  &__diagram-elem {
+    transform: rotateZ(-90deg);
+
+    &_unit {
+      fill: none;
+    }
+  }
+
+  &__diagram-text {
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-transform: uppercase;
+
+    & > &_votes,
+    & > &_word {
+      color: $perfume;
+    }
+  }
+  
 }
 
-.unit {
-  fill: none;
-}
+
 
 .gradient {
   &__primary {
