--- a/src/components/votes-chart/votes-chart.pug
+++ b/src/components/votes-chart/votes-chart.pug
@@ -1,4 +1,48 @@
 mixin votesChart( items=[] )
+  - const strokeWidth = 4
+  - const figureOuterRadius = 60
+  - const figureInnerRadius = figureOuterRadius - strokeWidth
+  - const strokeLength = 2 * Math.PI.toFixed(2) * figureInnerRadius
+  - const strokeGap = 2
+
+  - let votesTotal = 0
+  - let strokeOffset = -strokeGap / 2
+
+  .votes-chart
+    .votes-chart__diagram
+      svg.votes-chart__diagram-elem( width="120" height="120" viewBox="0 0 120 120" preserveAspectRatio="none" )
+        defs
+          each item in items
+            - votesTotal += item.votes
+            linearGradient( id=`${ item.name }-gradient` x1="1" y1="0" x2="0" y2="0" )
+              stop( class=`gradient__${ item.name }_start` offset="0%" )
+              stop( class=`gradient__${ item.name }_end`   offset="100%" )
+
+        each item in items
+          - const votesPercent = item.votes / votesTotal
+          - const strokeFilled = item.votes !== 0 ? strokeLength * votesPercent : strokeGap
+          circle.votes-chart__diagram-elem_unit(
+            r=figureInnerRadius
+            cx="50%"
+            cy="50%"
+            stroke=`url(#${ item.name }-gradient)`
+            stroke-width=strokeWidth
+            stroke-dasharray=`${strokeFilled - strokeGap} ${strokeLength}`
+            stroke-dashoffset=strokeOffset
+          )
+          - strokeOffset -= strokeFilled
+
+      .votes-chart__diagram-text 
+        span.votes-chart__diagram-text_votes.custom-font-style_h1 #{ votesTotal }
+        span.votes-chart__diagram-text_word.custom-font-style_h3 голос#{ setWordEnding( votesTotal ) }
+
+    .votes-chart__legend
+      - sortItems( items );
+      each item in items
+        .votes-chart__legend-item
+          .votes-chart__legend-item_marker( class=`marker_${ item.name }` )
+          .votes-chart__legend-item_text.custom-font-style_body #{ item.legend }
+
   -
     function setWordEnding( num ) {
       let result = ''
@@ -12,41 +56,6 @@ mixin votesChart( items=[] )
       return result;
     }
 
-  - const strokeWidth = 4
-  - const figureOuterRadius = 60
-  - const figureInnerRadius = figureOuterRadius - strokeWidth
-  - const strokeLength = 2 * Math.PI.toFixed(2) * figureInnerRadius
-  - const strokeGap = 4
-
-  - let votesTotal = 0
-  - let strokeOffset = -strokeGap / 2
-
-  .votes-chart
-    .votes-chart__diagram
-      svg.votes-chart__diagram-elem( width="120" height="120" viewBox="0 0 120 120" preserveAspectRatio="none" )
-        defs
-          each item in items
-            - votesTotal += item.votes
-
-            linearGradient( id=`${ item.name }-gradient` x1="1" y1="0" x2="0" y2="0" )
-              stop( class=`gradient__${ item.name }_start` offset="0%" )
-              stop( class=`gradient__${ item.name }_end`   offset="100%" )
-
-        each item in items
-          - const votesPercent = item.votes / votesTotal
-          - const strokeFilled = item.votes !== 0 ? strokeLength * votesPercent : strokeGap
-
-          circle.votes-chart__diagram-elem_unit(
-            r=figureInnerRadius
-            cx="50%"
-            cy="50%"
-            stroke=`url(#${ item.name }-gradient)`
-            stroke-width=strokeWidth
-            stroke-dasharray=`${strokeFilled - strokeGap} ${strokeLength}`
-            stroke-dashoffset=strokeOffset
-          )
-          - strokeOffset -= strokeFilled
-      .votes-chart__diagram-text 
-        span.votes-chart__diagram-text_votes.custom-font-style_h1 #{ votesTotal }
-        span.votes-chart__diagram-text_word.custom-font-style_h3 голос#{ setWordEnding( votesTotal ) }
-    .votes-chart__legend
+    function sortItems( arr ) {
+      arr.reverse().push( arr.shift() );
+    }
