I dont remember what i missed yesterday to commit

--- a/src/pages/website/__room/website__room.pug
+++ b/src/pages/website/__room/website__room.pug
@@ -8,10 +8,10 @@ body.ui-kit__body
 
   main
     +votesChart([
-      { name: "primary",    votes: 65,  legend: "Удовлетворительно" },
-      { name: "secondary",  votes: 65,  legend: "Хорошо"            },
-      { name: "tertiary",   votes: 130, legend: "Великолепно"       },
-      { name: "quaternary", votes: 0,   legend: "Разочарован"       }
+      { gradient: "primary",    votes: 65,  legend: "Удовлетворительно" },
+      { gradient: "secondary",  votes: 65,  legend: "Хорошо"            },
+      { gradient: "tertiary",   votes: 130, legend: "Великолепно"       },
+      { gradient: "quaternary", votes: 0,   legend: "Разочарован"       }
     ])
 
   footer 
