--- a/src/components/votes-chart/votes-chart.pug
+++ b/src/components/votes-chart/votes-chart.pug
@@ -14,9 +14,9 @@ mixin votesChart( items=[] )
         defs
           each item in items
             - votesTotal += item.votes
-            linearGradient( id=`${ item.name }-gradient` x1='1' y1='0' x2='0' y2='0' )
-              stop( class=`gradient__${ item.name }_start` offset='0%' )
-              stop( class=`gradient__${ item.name }_end`   offset='100%' )
+            linearGradient( id=`${ item.gradient }-gradient` x1='1' y1='0' x2='0' y2='0' )
+              stop( class=`gradient__${ item.gradient }_start` offset='0%' )
+              stop( class=`gradient__${ item.gradient }_end`   offset='100%' )
 
         each item in items
           - const votesPercentage = item.votes / votesTotal
@@ -25,7 +25,7 @@ mixin votesChart( items=[] )
             r=figureInnerRadius
             cx='50%'
             cy='50%'
-            stroke=`url(#${ item.name }-gradient)`
+            stroke=`url(#${ item.gradient }-gradient)`
             stroke-width=strokeWidth
             stroke-dasharray=`${strokeFilled - strokeGap} ${strokeLength}`
             stroke-dashoffset=strokeOffset
@@ -40,7 +40,7 @@ mixin votesChart( items=[] )
       - const sortedItems = sortArray( items )
       each item in sortedItems
         .votes-chart__legend-item
-          .votes-chart__legend-item_marker( class=`marker_${ item.name }` )
+          .votes-chart__legend-item_marker( class=`marker_${ item.gradient }` )
           .votes-chart__legend-item_text.custom-font-style_body #{ item.legend }
 
 -
