Fixed logotype referal link from 404 to landing

--- a/src/components/logo/logo.pug
+++ b/src/components/logo/logo.pug
@@ -5,7 +5,7 @@ mixin logo( item )
         input.logotype__button( type="submit" disabled=item.disabled )
         img.logotype__image( src=require("@images/vector/logo-monochrome-s48.svg") )
     when 'colorful'
-      form.logotype.logotype_colorful( action="404.html" )
+      form.logotype.logotype_colorful( action="website__landing.html" )
         input.logotype__button( type="submit" disabled=item.disabled )
         img.logotype__image( src=require("@images/vector/logo-colorful-s40.svg") )
         img.logotype__image( src=require("@images/vector/logo-text-part.svg") )
